# or-tools-boilerplate

./: CMakeLists.txt  README.md  local-build-msvc2019.cmd
.github/workflows/: build.yml
src/: main.cpp
